# racerapi

./: .gitignore  404.html  CHANGELOG.md  MIGRATION_REPORT.md  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml
.github/workflows/: ci.yml  deploy-docs.yml  docs.yml
alembic/: env.py  script.py.mako
alembic/versions/: 5ba780bae5e7_auto.py
architecture/dependency-injection/: index.html
architecture/enforcement/: index.html
architecture/modular-monolith/: index.html
architecture/module-boundaries/: index.html
architecture/overview/: index.html
architecture/request-flow/: index.html
architecture/rules/: index.html
backend/api-layer/: index.html
backend/repo-layer/: index.html
backend/schemas/: index.html
backend/service-layer/: index.html
cli-policy/: index.html
cli/commands/: index.html
cli/generators/: index.html
cli/overview/: index.html
core/architecture/: index.html
core/config/: index.html
core/database/: index.html
core/dependencies/: index.html
core/dependency-injection/: index.html
core/error-handling/: index.html
core/module-system/: index.html
database/migrations/: index.html
database/overview/: index.html
deployment/production/: index.html
development/debugging/: index.html
development/running/: index.html
development/setup/: index.html
development/testing/: index.html
docs/: getting-started.md  index.md  project-structure.md
docs/architecture/: enforcement.md  rules.md
docs/cli/: commands.md  generators.md  overview.md
docs/core/: architecture.md  dependency-injection.md  module-system.md
docs/database/: migrations.md  overview.md
docs/deployment/: production.md
docs/testing/: fixtures.md  overview.md
getting-started/: index.html
hello/: README.md  main.py  pyproject.toml
hello/core/: app.py  config.py  database.py  exceptions.py  lifecycle.py
hello/modules/health/: controller.py  routes.py  schema.py
hello2/: README.md  main.py  pyproject.toml
hello2/core/: app.py  config.py  database.py  logger.py
hello2/integrations/email/: __init__.py
hello2/integrations/payment/: __init__.py
hello2/integrations/storage/: __init__.py
hello2/modules/health/: module.py
hello2/modules/user/: service.py  test_controller.py  test_service.py
hello2/shared/: decorators.py
hello3/: README.md  main.py  pyproject.toml
hello3/core/: app.py  config.py  database.py
hello3/modules/user/: controller.py
hello3/shared/: response.py
hello3/tests/: __init__.py
hello3/utils/: helpers.py
modules/adding-new-module/: index.html
modules/structure/: index.html
modules/users/: index.html
project-structure/: index.html
scripts/: check_architecture.py  check_metadata.py  create_and_query.py  debug_cli.py  debug_typer.py
search/: search_index.json
src/: conftest.py
src/docs/: mkdocs.yml
src/docs/docs/: index.md
src/docs/docs/architecture/: dependency-injection.md  modular-monolith.md  module-boundaries.md  overview.md  request-flow.md
src/docs/docs/backend/: api-layer.md  repo-layer.md  schemas.md  service-layer.md
src/docs/docs/core/: config.md  database.md  dependencies.md  error-handling.md
src/docs/docs/development/: debugging.md  running.md  setup.md  testing.md
src/docs/docs/modules/: adding-new-module.md  structure.md  users.md
src/docs/docs/standards/: anti-patterns.md  coding-rules.md  review-checklist.md
src/racerapi/: __init__.py  __main__.py  console.py  main.py
src/racerapi/app/: __init__.py
src/racerapi/cli/: __init__.py  app.py  context.py  registry.py  utils.py
src/racerapi/cli/commands/: __init__.py  db.py  generate.py  new.py  project.py  run.py  runtime.py
src/racerapi/core/: bootstrap.py  config.py  deps.py  di.py  di_fastapi.py  logger.py
src/racerapi/core/config/: settings.py
src/racerapi/core/contracts/: database.py
src/racerapi/core/db/: __init__.py  base_driver.py  factory.py
src/racerapi/core/logger/: __init__.py  logger.py
src/racerapi/db/: __init__.py  base_driver.py  models_registry.py  session.py
src/racerapi/modules/: registry.py
src/racerapi/shared/: pagination.py  responses.py
src/racerapi_cli/: __main__.py
standards/anti-patterns/: index.html
standards/coding-rules/: index.html
standards/review-checklist/: index.html
testing/fixtures/: index.html
testing/overview/: index.html
tests/: conftest.py  test_config.py  test_health_repo.py  test_health_service.py  test_users_api.py  test_users_repo.py  test_users_service.py
(+102 files in other folders)
