[build-system]
requires = ["setuptools==75.6.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "racerapi"
version = "0.0.6"
description = "Production-grade FastAPI modular monolith"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Mr. Prathamesh More", email = "iamprathamshmore07@gmail.com" },
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Framework :: FastAPI",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "sqlalchemy==2.0.36",
  "pydantic==2.10.3",
  "pydantic-settings==2.6.1",
  "typer[all]==0.10.0",
  "alembic==1.11.1",
  "email-validator==2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-cov==6.0.0",
  "httpx==0.28.1",
  "black==24.10.0",
  "ruff==0.8.6",
  "mypy==1.13.0",
  "pre-commit==4.0.1",
  "python-dotenv==1.0.1",
]

[project.scripts]
# Entry point for the stable console script. Delegates to Typer implementations.
racerapi = "racerapi.console:main"

[project.urls]
Homepage = "https://github.com/23bg/racerapi"
Documentation = "https://github.com/23bg/racerapi#readme"


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
racerapi = ["templates/**/*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
