[metadata]
name = RacerAPI
version = 0.0.1
description = A Python-based backend framework built on FastAPI.
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/RacerAPI
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Framework :: FastAPI

[options]
packages = find:
python_requires = >=3.8
install_requires =
    typer[all]
    fastapi
    pytest

[options.entry_points]
console_scripts =
    myfastapi = RacerAPI.cli:app
